// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBox render initial state with all props set 1`] = `
<ForwardRef(InternalSelect)
  defaultValue="value1"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": <span>
          Value 1
        </span>,
        "value": "value1",
      },
      Object {
        "label": <span>
          Value 2
        </span>,
        "value": "value2",
      },
    ]
  }
  showArrow={true}
/>
`;

exports[`SelectBox render initial state with data-test-id 1`] = `
<ForwardRef(InternalSelect)
  data-test-id="test-select"
  defaultValue="value1"
  onChange={[MockFunction]}
  options={
    Array [
      Object {
        "label": <span
          data-test-id="test-select-option-value1"
        >
          Value 1
        </span>,
        "value": "value1",
      },
      Object {
        "label": <span
          data-test-id="test-select-option-value2"
        >
          Value 2
        </span>,
        "value": "value2",
      },
    ]
  }
  showArrow={true}
/>
`;
